--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "penzionPeta",
+  "name": "Domecek Jalovci",
   "author": "Petra Dedinova",
   "email": "hi@maccarianagency.com",
   "version": "1.0.0",
@@ -41,10 +41,14 @@
     "aos": "^2.3.4",
     "card-validator": "^8.1.1",
     "formik": "^2.2.6",
-    "gatsby": "^3.13.0",
+    "gatsby": "^4.21.1",
+    "gatsby-plugin-image": "^2.21.0",
     "gatsby-plugin-material-ui": "^3.0.1",
     "gatsby-plugin-page-creator": "^3.13.0",
     "gatsby-plugin-resolve-src": "^2.1.0",
+    "gatsby-plugin-sharp": "^4.21.0",
+    "gatsby-source-filesystem": "^4.21.1",
+    "gatsby-transformer-sharp": "^4.21.0",
     "jarallax": "^1.12.7",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
