--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "gatsby-plugin-page-creator": "^3.13.0",
     "gatsby-plugin-resolve-src": "^2.1.0",
     "gatsby-plugin-sharp": "^4.21.0",
+    "gatsby-plugin-smoothscroll": "^1.2.0",
     "gatsby-source-contentful": "^7.23.1",
     "gatsby-source-filesystem": "^4.21.1",
     "gatsby-transformer-sharp": "^4.21.0",
@@ -54,6 +55,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-countup": "^4.3.3",
+    "react-datepicker": "^4.10.0",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-image-lightbox": "^5.1.4",
