--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     "@emotion/styled": "^11.3.0",
     "@mui/icons-material": "^5.0.1",
     "@mui/material": "^5.0.2",
+    "@mui/x-date-pickers": "^5.0.19",
     "aos": "^2.3.4",
     "card-validator": "^8.1.1",
+    "dayjs": "^1.11.7",
     "formik": "^2.2.6",
     "gatsby": "^4.21.1",
     "gatsby-plugin-image": "^2.21.0",
@@ -50,7 +52,9 @@
     "gatsby-plugin-smoothscroll": "^1.2.0",
     "gatsby-source-contentful": "^7.23.1",
     "gatsby-source-filesystem": "^4.21.1",
+    "gatsby-source-google-calendar": "^1.1.3",
     "gatsby-transformer-sharp": "^4.21.0",
+    "googleapis": "^111.0.0",
     "jarallax": "^1.12.7",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
