--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "aos": "^2.3.4",
     "babel-plugin-macros": "^3.1.0",
     "card-validator": "^8.1.1",
+    "cogo-toast": "^4.2.3",
     "dayjs": "^1.11.7",
     "formik": "^2.2.6",
     "gatsby": "^4.21.1",
