--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@emotion/react": "^11.4.0",
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "@fontsource/darker-grotesque": "^4.5.9",
     "@mui/icons-material": "^5.0.1",
     "@mui/material": "^5.0.2",
     "@mui/x-date-pickers": "^5.0.19",
@@ -48,6 +49,7 @@
     "formik": "^2.2.6",
     "gatsby": "^4.21.1",
     "gatsby-plugin-image": "^2.21.0",
+    "gatsby-plugin-manifest": "^4.25.0",
     "gatsby-plugin-material-ui": "^3.0.1",
     "gatsby-plugin-page-creator": "^3.13.0",
     "gatsby-plugin-resolve-src": "^2.1.0",
