--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "gatsby-plugin-image": "^2.21.0",
     "gatsby-plugin-manifest": "^4.25.0",
     "gatsby-plugin-material-ui": "^3.0.1",
+    "gatsby-plugin-netlify": "^5.1.0",
     "gatsby-plugin-page-creator": "^3.13.0",
     "gatsby-plugin-resolve-src": "^2.1.0",
     "gatsby-plugin-sharp": "^4.21.0",
